--- a/portfolio website/index.html
+++ b/portfolio website/index.html
@@ -42,12 +42,12 @@
         </div>
 
         <div class="home-img">
-            <img src="images/_The process of delving into the black abyss is to….jpeg" alt="">
+            <img src="./images/_Theprocess.jpeg" alt="">
         </div>
     </section>
     <section id="about" class="about">
         <div class="about-img">
-            <img src="images/_The process of delving into the black abyss is to….jpeg" alt="">
+            <img src="./images/_Theprocess.jpeg" alt="">
         </div>
         <div class="about-content">
             <h2>About <span>Me</span></h2>
@@ -92,3 +92,4 @@
 
 
 </html>
+
